--- a/tambahan/03.row_and_col_1_baris.html
+++ b/tambahan/03.row_and_col_1_baris.html
@@ -1,30 +1,32 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="id">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1,
-    shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1,
+    shrink-to-fit=no"
+    />
     <title>Belajar Bootstrap</title>
-    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap.css" />
     <style>
-    .col {
-      background-color: rgba(86, 61, 124, 0.15);
-      border: 1px solid rgba(86, 61, 124, 0.2);
-      padding: 0.4em;
-      margin-top: 0.5em; 
-    }
+      .col {
+        background-color: rgba(86, 61, 124, 0.15);
+        border: 1px solid rgba(86, 61, 124, 0.2);
+        padding: 0.4em;
+        margin: 0.3rem;
+      }
     </style>
   </head>
   <body>
-
     <div class="container">
       <div class="row">
-        <div class="col"> Kolom 1 </div>
-        <div class="col"> Kolom 2 </div>
-        <div class="col"> Kolom 3 </div>
+        <div class="col">Kolom 1</div>
+        <div class="col">Kolom 2</div>
+        <div class="col">Kolom 3</div>
       </div>
     </div>
-    
+
     <script src="js/jquery-3.3.1.js"></script>
     <script src="js/popper.js"></script>
     <script src="js/bootstrap.js"></script>
