--- a/05/index.html
+++ b/05/index.html
@@ -17,6 +17,12 @@
       crossorigin="anonymous"
     />
 
+    <!-- font awesome -->
+    <script
+      src="https://kit.fontawesome.com/f42066a1eb.js"
+      crossorigin="anonymous"
+    ></script>
+
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -115,6 +121,38 @@
       </div>
     </section>
 
+    <!--HOME ICON SECTION  -->
+    <section id="home-icons" class="py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4 mb-4 text-center">
+            <i class="fas fa-cog fa-3x mb-2"></i>
+            <h3>Turning Gears</h3>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga,
+              eius.
+            </p>
+          </div>
+          <div class="col-md-4 mb-4 text-center">
+            <i class="fas fa-cloud fa-3x mb-2"></i>
+            <h3>Cloud Data</h3>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga,
+              eius.
+            </p>
+          </div>
+          <div class="col-md-4 mb-4 text-center">
+            <i class="fas fa-cart-plus fa-3x mb-2"></i>
+            <h3>Get Profit</h3>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga,
+              eius.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
@@ -128,5 +166,13 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
+
+    <!-- Configure Careousel -->
+    <script>
+      ".carousel".carousel({
+        interval: 6000,
+        pause: "hover"
+      });
+    </script>
   </body>
 </html>
