--- a/05/blog.html
+++ b/05/blog.html
@@ -82,6 +82,121 @@
       </div>
     </header>
 
+    <!-- Blog Section -->
+    <section id="blog" class="py-5">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <div class="card-columns">
+              <div class="card">
+                <img
+                  src="http://source.unsplash.com/random/303x200/"
+                  alt=""
+                  class="img-fluid card-img-top"
+                />
+                <div class="card-body">
+                  <h4 class="card-title">Blog Post One</h4>
+                  <small class="text-muted"
+                    >written by Robi Hamdani on 05/20</small
+                  >
+                  <hr />
+                  <p class="card-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Recusandae odio maiores nulla delectus excepturi itaque
+                    numquam in consequatur necessitatibus quibusdam!
+                  </p>
+                </div>
+              </div>
+
+              <div class="card p-3">
+                <blockquote class="card-blockquote card-body">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Adipisci, nemo.
+                  </p>
+                  <footer class="blockquote-footer">
+                    <small class="text-muted"
+                      >Someone Great in
+                      <cite title="Source Title">Source Title</cite>
+                    </small>
+                  </footer>
+                </blockquote>
+              </div>
+              <div class="card">
+                <img
+                  src="http://source.unsplash.com/random/302x200/"
+                  alt=""
+                  class="img-fluid card-img-top"
+                />
+                <div class="card-body">
+                  <h4 class="card-title">Blog Post Two</h4>
+                  <small class="text-muted"
+                    >written by Robi Hamdani on 05/20</small
+                  >
+                  <hr />
+                  <p class="card-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Recusandae odio maiores nulla delectus excepturi itaque
+                    numquam in consequatur necessitatibus quibusdam!
+                  </p>
+                </div>
+              </div>
+
+              <div class="card p-3 bg-danger text-white">
+                <blockquote class="card-blockquote card-body">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Adipisci, nemo.
+                  </p>
+                  <footer class="blockquote-footer">
+                    <small class="text-white"
+                      >Someone Great in
+                      <cite title="Source Title">Source Title</cite>
+                    </small>
+                  </footer>
+                </blockquote>
+              </div>
+
+              <div class="card">
+                <img
+                  src="http://source.unsplash.com/random/301x200/"
+                  alt=""
+                  class="img-fluid card-img-top"
+                />
+                <div class="card-body">
+                  <h4 class="card-title">Blog Post Two</h4>
+                  <small class="text-muted"
+                    >written by Robi Hamdani on 05/20</small
+                  >
+                  <hr />
+                  <p class="card-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Recusandae odio maiores nulla delectus excepturi itaque
+                    numquam in consequatur necessitatibus quibusdam!
+                  </p>
+                </div>
+              </div>
+
+              <div class="card p-3 ">
+                <blockquote class="card-blockquote card-body">
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Adipisci, nemo.
+                  </p>
+                  <footer class="blockquote-footer">
+                    <small class="text-muted"
+                      >Someone Great in
+                      <cite title="Source Title">Source Title</cite>
+                    </small>
+                  </footer>
+                </blockquote>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- FOOTER -->
     <footer id="main-footer" class="text-center p-4">
       <div class="container">
@@ -113,12 +228,6 @@
     <script>
       // Get the current year for the copyright
       $("#year").text(new Date().getFullYear());
-
-      $(".slider").slick({
-        infinite: true,
-        slideToShow: 1,
-        slideToScroll: 1
-      });
     </script>
   </body>
 </html>
