penambahan beberapa file

--- a/05/about.html
+++ b/05/about.html
@@ -186,7 +186,7 @@
     <!-- TESTIMONIALS -->
     <section id="testimonials" class="p-4 bg-dark text-white">
       <div class="container">
-        <h2 class="text-center">testimonials</h2>
+        <h2 class="text-center">Testimonials</h2>
         <div class="row text-center">
           <div class="col">
             <div class="slider">
